--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,13 @@
     font-size: 21px;
     line-height: 28px;
 }
+
+.landing{
+    height: 100vh;
+}
+
+@media screen and (min-width:768px) and (max-width: 1024px){
+    .landing{
+        height: auto;
+    }
+}
