--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,17 @@
+header{
+    position: fixed;
+    width: 100%;
+    top:0;
+    left: 0;
+    z-index: 9999;
+}
+
 .logo{
     font-weight: 800;
     font-size: 45px;
-    line-height: 75px;
+    line-height: 20px;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     letter-spacing: -0.04em;
 }
 
@@ -15,10 +25,11 @@
 
 .header__container__links{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     width: 100%;
     margin-top: 5px;
+    margin-bottom: 2rem;
 }
 
 .header__container__links-links{
@@ -28,4 +39,23 @@
     letter-spacing: -0.04em;
     text-decoration: none;
     color: #000;
+    transition: color 0.25s;
+}
+
+.header__container__links-links:hover{
+    color: #fff;
+}
+
+@media screen and (max-width: 768px){
+    .logo{
+        font-size: 30px;
+        margin-top: 1.5rem;
+        margin-bottom: 1rem;
+    }
+
+    .header__container__links{
+        justify-content: space-between;
+        margin-bottom: 1rem;
+    }
+    
 }
