--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,11 @@
     color: #000;
 }
 
+a{
+  text-decoration: none;
+  transition: color 0.25s;
+}
+
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
