termino hasta clientes

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;800&display=swap');
 
+:root{
+  --global-color-primary: #517ae9;
+}
+
 *{
     font-family: 'Manrope', arial, sans-serif;
     scroll-behavior: smooth;
