--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,6 +4,8 @@ header{
     top:0;
     left: 0;
     z-index: 9999;
+    background-color: #fff;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.397);
 }
 
 .logo{
