--- a/src/components/planes/plan/plan.css
+++ b/src/components/planes/plan/plan.css
@@ -46,7 +46,7 @@
 }
 
 .card__body-boton{
-    background: #F72C2C;
+    background: var(--global-color-primary);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 23px;
     padding: 10px 0;
