--- a/src/components/planes/planes.css
+++ b/src/components/planes/planes.css
@@ -1,6 +1,6 @@
 .card-planes{
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
 }
 
 @media screen and (max-width: 768px){
