--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,33 @@
     height: 100vh;
 }
 
+.fab{
+    position:fixed;
+    right: 2rem;
+    bottom: 2rem;
+    opacity: 0;
+    transition: all 0.5s ease;
+    z-index: 250;
+    padding: 1rem 1.2rem;
+    font-size: 30px;
+    border-radius: 50%;
+    background-color: #BFBAFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.scrolling-active__fab{
+    opacity: 1;
+}
+
 @media screen and (min-width:768px) and (max-width: 1024px){
     .landing{
         height: auto;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .fab{
+        right: 1rem;
+        bottom: 1rem;
     }
 }
