--- a/src/components/clima/card/card.css
+++ b/src/components/clima/card/card.css
@@ -4,7 +4,7 @@
     margin-right: 2rem;
     border-radius: 23px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    
+    font-size: 20px;
 }
 
 .clima__card-content{
@@ -18,8 +18,16 @@
     margin: 0 2rem;
 }
 
+.clima__card__texto-temp{
+    font-size: 35px;
+    font-weight: bold;
+    line-height: 26px;
+    margin-bottom: 1rem;
+}
+
 .p__clima{
     line-height: 15px;
+    margin-bottom: 1rem;
 }
 
 .p__clima:last-child{
@@ -29,9 +37,10 @@
 @media screen and (max-width: 768px){
     .clima__card{
         width: 100%;
-        height: 120px;
+        height: 130px;
         margin-right: 0;
         margin-top: 2rem;
+        font-size: 18px;
     }
 
     .clima__card-content{
@@ -40,6 +49,10 @@
 
     .clima__card__icono{
         margin: 0;
+    }
+
+    .p__clima{
+        margin-bottom: 0.5rem;
     }
 }
 
