--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,8 +4,7 @@ header{
     top:0;
     left: 0;
     z-index: 9999;
-    background-color: #fff;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.397);
+    transition: all 0.5s ease;
 }
 
 .logo{
@@ -15,6 +14,7 @@ header{
     margin-top: 2rem;
     margin-bottom: 2rem;
     letter-spacing: -0.04em;
+    transition: all 0.5s ease;
 }
 
 .header__container{
@@ -23,6 +23,7 @@ header{
     justify-content: center;
     align-items: center;
     padding: 0px 20px;
+    transition: all 0.5s ease;
 }
 
 .header__container__links{
@@ -32,6 +33,7 @@ header{
     width: 100%;
     margin-top: 5px;
     margin-bottom: 2rem;
+    transition: all 0.5s ease;
 }
 
 .header__container__links-links{
@@ -50,14 +52,29 @@ header{
 
 @media screen and (max-width: 768px){
     .logo{
-        font-size: 30px;
+        font-size: 35px;
         margin-top: 1.5rem;
-        margin-bottom: 1rem;
+        margin-bottom: 1.5rem;
     }
 
     .header__container__links{
-        justify-content: space-between;
+        justify-content: space-around;
         margin-bottom: 1rem;
     }
     
+}
+
+.scrolling-active{
+    background-color: #fff;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.397);
+}
+
+.scrolling-active__links{
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+
+.scrolling-active__logo{
+    font-size: 30px;
+    margin: 1rem 0 1.5rem 0;
 }
