--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
     opacity: 1;
 }
 
-@media screen and (min-width:768px) and (max-width: 1024px){
+@media screen and (min-width:768px){
     .landing{
         height: auto;
     }
