--- a/src/components/clientes/card/card.css
+++ b/src/components/clientes/card/card.css
@@ -12,6 +12,14 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.cardClientes:first-child{
+    margin-left: 0;
+}
+
+.cardClientes:last-child{
+    margin-right: 0;
+}
+
 .cardClientes::after{
     content: "";
     position: absolute;
