--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;800&display=swap');
 
 :root{
-  --global-color-primary: #517ae9;
+  --global-color-primary: #3a5bffd7;
 }
 
 *{
