--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -1,95 +1,135 @@
-.main{
-    padding-top: 140px;
-    position: relative;
-    height: 100%;
+.main {
+  padding-top: 140px;
+  position: relative;
+  height: 100%;
 }
 
-.main__title{
-    font-weight: 800;
-    font-size: 62px;
-    line-height: 75px;
-    text-align: center;
-    letter-spacing: -0.04em;
-    margin-top: 2rem;
-    background: linear-gradient(90.06deg, #F72C2C 13.69%, #3A5AFF 86.78%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+.main__title {
+  font-weight: 800;
+  font-size: 62px;
+  line-height: 75px;
+  text-align: center;
+  letter-spacing: -0.04em;
+  margin-top: 2rem;
+  background: linear-gradient(90.06deg, #f72c2c 13.69%, #3a5aff 86.78%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
-
-.main__grid{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-gap: 1rem 1rem;
-    margin-top: 2rem;
-    justify-content: center;
+.main__grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 1rem 1rem;
+  margin-top: 2rem;
+  justify-content: center;
 }
 
-.main__grid-container-small,.main__grid-container-large{
-    height: 100%;
-    margin: auto;
+.main__grid-container-small,
+.main__grid-container-large {
+  margin: auto;
 }
 
-.main__grid-container-small img, .main__grid-container-large img{
-    width: 100%;
-    height: 100%;
-    border-radius: 23px;
-    object-fit: cover;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+.main__grid-container-small {
+  height: 300px;
+  width: 100%;
 }
 
+.main__grid-container-large {
+  height: 100%;
+  margin: 0 auto 0 auto;
+}
 
-#main__grid-chico-izq-top { grid-area: 1 / 1 / 2 / 2; }
-#main__grid-chico-izq-bottom { grid-area: 2 / 1 / 3 / 2; }
-#main__grid-grande { grid-area: 1 / 2 / 3 / 3; }
-#main__grid-chico-der-top { grid-area: 1 / 3 / 2 / 4; }
-#main__grid-chico-der-bottom { grid-area: 2 / 3 / 3 / 4; }
+.main__grid-container-small img,
+.main__grid-container-large img {
+  width: 100%;
+  height: 100%;
+  border-radius: 23px;
+  object-fit: cover;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
 
-.main__scrollDown{
-    font-size: 30px;
-    position: absolute;
-    bottom: 1rem;
-    left: 0;
-    right: 0;
+#main__grid-chico-izq-top {
+  grid-area: 1 / 1 / 2 / 2;
+}
+#main__grid-chico-izq-bottom {
+  grid-area: 2 / 1 / 3 / 2;
+}
+#main__grid-grande {
+  grid-area: 1 / 2 / 3 / 3;
+}
+#main__grid-chico-der-top {
+  grid-area: 1 / 3 / 2 / 4;
+}
+#main__grid-chico-der-bottom {
+  grid-area: 2 / 3 / 3 / 4;
+}
+
+.main__scrollDown {
+  font-size: 30px;
+  position: absolute;
+  bottom: 1rem;
+  left: 0;
+  right: 0;
 }
 
 @media screen and (max-width: 768px) {
-    .main{
-        padding-top: 101px;
-    }
+  .main {
+    padding-top: 101px;
+  }
 
-    .main__title{
-        font-size: 40px;
-        line-height: 50px;
-        margin-top: 2rem;
-    }
+  .main__title {
+    font-size: 40px;
+    line-height: 50px;
+    margin-top: 2rem;
+  }
 
-    .main__grid{
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        height: calc(100vh - 350px);
-    }
-    #main__grid-chico-izq-top { grid-area: 1 / 1 / 2 / 2; }
-    #main__grid-chico-izq-bottom { grid-area: 2 / 1 / 3 / 1; }
-    #main__grid-grande { grid-area: 1 / 2 / 3 / 3; }
-    #main__grid-chico-der-top { display: none;}
-    #main__grid-chico-der-bottom { display: none; }
+  .main__grid {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    height: calc(100vh - 350px);
+  }
+  #main__grid-chico-izq-top {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  #main__grid-chico-izq-bottom {
+    grid-area: 2 / 1 / 3 / 1;
+  }
+  #main__grid-grande {
+    grid-area: 1 / 2 / 3 / 3;
+  }
+  #main__grid-chico-der-top {
+    display: none;
+  }
+  #main__grid-chico-der-bottom {
+    display: none;
+  }
 
-    .main__scrollDown{
-        bottom: 0.5rem;
-    }
+  .main__scrollDown {
+    bottom: 0.5rem;
+  }
+
+  .main__grid-container-small {
+    height: 100%;
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .main__grid-container-small {
+    height: 200px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
-    .main__title{
-        margin-top: 1rem;
-    }
+  .main__title {
+    margin-top: 1rem;
+  }
 }
 
-@media screen and (min-width: 768px){
-    .main__scrollDown{
-        display: none;
-    }
+@media screen and (min-width: 768px) {
+  .main__scrollDown {
+    display: none;
+  }
 }
