--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,4 @@
 .gradient__bg {
-  /*background: radial-gradient(
-    98.16% 98.16% at 50% 1.84%,
-    #bfbaff 0%,
-    rgba(77, 170, 236, 0.74651) 44.27%,
-    #bfbaff 71.73%,
-    rgba(191, 186, 255, 0.35) 88.69%
-  );*/
-
   background: linear-gradient(360deg, rgba(249, 113, 113, 0.3) 0%, rgba(191, 186, 255, 0.3) 27.04%), radial-gradient(98.16% 98.16% at 50% 1.84%, #BFBAFF 15.1%, rgba(77, 170, 236, 0.74651) 46.87%, #BFBAFF 71.73%, rgba(191, 186, 255, 0.35) 88.69%);
 }
 
@@ -45,6 +37,23 @@
 .scrolling-active__fab {
   opacity: 1;
   cursor: pointer;
+}
+
+.fab-contacto {
+  position: fixed;
+  right: 2rem;
+  bottom: 2rem;
+  transition: all 0.5s ease;
+  z-index: 250;
+  padding: 0.7rem 1rem;
+  font-size: 30px;
+  border-radius: 50%;
+  background-color: var(--global-color-primary);
+  box-shadow: 0px 4px 2px rgba(0, 0, 0, 0.25);
+}
+
+.scrolling-active__fab-contacto {
+  bottom: 6.5rem;
 }
 
 @media screen and (min-width: 768px) {
