--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@
   bottom: 2rem;
   transition: all 0.5s ease;
   z-index: 250;
-  padding: 0.7rem 1rem;
+  padding: 0.6rem 1rem;
   font-size: 30px;
   border-radius: 50%;
   background-color: var(--global-color-primary);
@@ -64,6 +64,11 @@
 
 @media screen and (max-width: 768px) {
   .fab {
+    right: 1rem;
+    bottom: 1rem;
+  }
+
+  .fab-contacto{
     right: 1rem;
     bottom: 1rem;
   }
