--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@
   padding: 0.6rem 1rem;
   font-size: 30px;
   border-radius: 50%;
-  background-color: var(--global-color-primary);
+  background-color: #dcb0ff;
   box-shadow: 0px 4px 2px rgba(0, 0, 0, 0.25);
 }
 
@@ -70,6 +70,10 @@
 
   .fab-contacto{
     right: 1rem;
+    bottom: 1rem;
+  }
+
+  .scrolling-active__fab-contacto {
     bottom: 6rem;
   }
 }
