--- a/src/components/info/info.css
+++ b/src/components/info/info.css
@@ -13,8 +13,17 @@ ul{
 }
 
 .marcas__container{
-    width: calc((100vw/5) - 50px);
+    width: 200px;
     margin-right: 5rem;
+}
+
+.marcas__container img{
+    width: 100%;
+    padding: 1rem;
+}
+
+.marcas__container:first-child>img{ /*eukanuba*/
+    width: 200px;
 }
 
 .marcas__container:last-child{
@@ -52,15 +61,23 @@ ul{
     }
 
     .marcas__container{
-        width: 120px;
-        margin-right: 0;
+        width: 170px;
+        margin-right: 0.25rem;
         margin-bottom: 2rem;
         display: flex;
         justify-content: center;
     }
 
-    .marcas__container:first-child{
-        width: 140px;
+    .marcas__container:nth-child(even){
+        margin-right: 0;
+    }
+
+    .marcas__container:first-child>img{
+        width: 190px;
+    }
+
+    .marcas__container:last-child{
+        margin-bottom: 0;
     }
 }
 
@@ -68,4 +85,31 @@ ul{
     .info{
         margin-top: 3rem;
     } 
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
+    .marcas{
+        flex-wrap: wrap;
+    }
+
+    .marcas__container{
+        margin-right: 0;
+        margin-bottom: 2rem;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .marcas__container:first-child>img{
+        width: 200px !important;
+    }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+    .marcas__container{
+        margin-right: 1rem;
+    }
+
+    .marcas__container:last-child{
+        margin-right: 0;
+    }
 }
