corrijo detalles de colores y margenes. Perfeccionamiento

--- a/src/components/index/footer/formularioContacto/formularioContacto.css
+++ b/src/components/index/footer/formularioContacto/formularioContacto.css
@@ -5,12 +5,16 @@
 }
 
 #btnContacto{
-    background-color: var(--global-color-primary) !important;
-    border-radius: 23px !important;
-    border: 0 !important;
+    background-color: var(--global-color-primary);
+    border-radius: 23px;
+    border: 0;
     transition: background-color 0.25s ease;
 }
 
 #btnContacto:hover{
     background-color: var(--global-color-primary-dark) !important;
+}
+
+.feedback{
+    margin-left: 1rem;
 }
