--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,7 +3,7 @@ header{
     width: 100%;
     top:0;
     left: 0;
-    z-index: 9999;
+    z-index: 300;
     transition: all 0.5s ease;
 }
 
@@ -49,6 +49,11 @@ header{
 .header__container__links-links:hover{
     color: #fff ;
     text-decoration: underline;
+}
+
+.header__button{
+    border: 0;
+    background: transparent;
 }
 
 @media screen and (max-width: 768px){
