--- a/src/components/registro/header/headerRegistro.css
+++ b/src/components/registro/header/headerRegistro.css
@@ -1,6 +1,7 @@
 .headerRegistro__container{
-    border: 1px solid #e6e6e6;
+    border-bottom: 1px solid #e6e6e6;
     padding: 1rem 0;
+    background: #fff;
 }
 
 @media screen and (max-width: 768px){
