--- a/src/pages/registro/registro.css
+++ b/src/pages/registro/registro.css
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 100%;
+    height: calc(100vh - 118px);
 }
 
 .p__registro{
@@ -46,6 +46,10 @@
     .registro__container{
         height: calc(100vh - 102px);
         margin-top: 102px;
+    }
+
+    .main__registro-content{
+        height: calc(100vh - 102px);
     }
 
     .titulos__registro{
