--- a/src/pages/admin/admin.css
+++ b/src/pages/admin/admin.css
@@ -2,12 +2,20 @@
     border-right: 1px solid rgba(204, 204, 204, 0.658);
     height: 100vh;
     display: block;
+    position: fixed;
+    background-color: rgba(255, 255, 255, 0.979);
 }
 
 .admin{
     padding-right: 0 !important; 
     margin: 0 !important;
     max-width: 100vw;
+}
+
+.admin__panel{
+    padding-left: 16.6vw !important;
+    width: 100vw !important;
+    height: 100vh;
 }
 
 @media screen and (max-width: 1200px) {
@@ -17,6 +25,12 @@
         top: 0;
         left: 0;
         border: 0;
+        background-color: transparent;
+    }
+
+    .admin__panel{
+        padding-left: 0 !important;
+        height: 100%;
     }
 
     body{
