--- a/src/pages/admin/admin.css
+++ b/src/pages/admin/admin.css
@@ -14,6 +14,7 @@
 
 .admin__panel{
     padding-left: 16.6vw !important;
+    padding-right: 0 !important;
     width: 100vw !important;
     height: 100vh;
 }
