--- a/src/pages/admin/pacientes/crudPacientes/crudPacientes.css
+++ b/src/pages/admin/pacientes/crudPacientes/crudPacientes.css
@@ -61,6 +61,10 @@
     .admin__panel__pacientes-content{
         margin-top: 40px;
     }
+
+    .admin__panel__pacientes-newUser{
+        height: calc(100vh - 72px);
+    }
 }
 
 @media screen and (max-width: 992px) {
