--- a/src/components/admin/navegacion/navItem/navItem.css
+++ b/src/components/admin/navegacion/navItem/navItem.css
@@ -2,9 +2,23 @@
     display:flex;
     align-items: center;
     border-radius: 23px;
+    width: 100%;
     margin: 0.5rem 0;
     text-decoration: none;
     transition: all 0.2s ease;
+}
+
+.admin__nav-item-exit{
+    border: 0;
+    background-color: transparent;
+}
+
+.admin__nav-item-exit i{
+    color: red;
+}
+
+.admin__nav-item-exit p{
+    color: red;
 }
 
 .admin__nav-item-icon{
