--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -61,6 +61,7 @@ header{
     background-color: red;
     color: white;
     border-radius: 23px;
+    border: 0;
 }
 
 @media screen and (max-width: 768px){
