--- a/src/components/login/formularioLogin.css
+++ b/src/components/login/formularioLogin.css
@@ -1,6 +1,8 @@
 .login__olvidasteContraseña{
     text-decoration: none;
     color: #000;
+    border: 0;
+    background: transparent;
 }
 
 .login__olvidasteContraseña:hover{
