termino CRUD de citas, añado funcionalidades en pag principal de admin y corrijo warnings de react

--- a/src/pages/admin/pacientes/crudPacientes/crudPacientes.css
+++ b/src/pages/admin/pacientes/crudPacientes/crudPacientes.css
@@ -43,6 +43,10 @@
     margin: auto;
 }
 
+.admin__panel__pacientes-newUser-form{
+    text-align: start;
+}
+
 .admin__panel__pacientes-editarUser-btnMascotas:hover{
     background-color: rgb(218, 218, 218);
 }
