--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,8 @@ body {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  /*background: #f1f1f1; */
+  background-color: transparent;
 }
  
 /* Handle */
