--- a/src/components/admin/tabla/tablaItem/tablaItem.css
+++ b/src/components/admin/tabla/tablaItem/tablaItem.css
@@ -15,3 +15,12 @@
 .admin__tables-btn{
     height: 100% !important;
 }
+
+.admin__tables-avatar{
+    height: 50px;
+    width: 100%;
+}
+
+.admin__tables-avatar img{
+    height: 50px;
+}
