empiezo pantallas de user

--- a/src/components/admin/navegacion/navegacion.css
+++ b/src/components/admin/navegacion/navegacion.css
@@ -37,7 +37,7 @@
 
 .admin__user-foto img {
   width: 100%;
-  border-radius: 50%;
+  /*border-radius: 50%;*/
 }
 
 @media screen and (max-width: 1200px) {
