--- a/src/components/admin/panel/list/listItem/listItem.css
+++ b/src/components/admin/panel/list/listItem/listItem.css
@@ -21,6 +21,13 @@
   padding-left: 0 !important;
 }
 
+.admin__list__item-info-mascotas {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-left: 0 !important;
+}
+
 @media screen and (max-width: 1200px) {
   .admin__list__item-info {
     padding-left: 1rem !important;
