resuelvo comentarios repetidos, mejoro estetica de listas en panel user/admin, y corrijo seleccion de planes

--- a/src/components/user/planes/plan/plan.css
+++ b/src/components/user/planes/plan/plan.css
@@ -12,4 +12,11 @@
     .user__planes-container{
         flex-direction: column;
     }
+
+    
+    .user__planes-info-cargando{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
