--- a/src/components/admin/panel/list/listItem/listItem.css
+++ b/src/components/admin/panel/list/listItem/listItem.css
@@ -1,11 +1,15 @@
 .admin__list__item {
   margin: 0 !important;
-  height: 100px;
+  height: calc((50vh / 3) - 22px);
   border-bottom: 1px solid rgba(231, 231, 231, 0.253);
 }
 
+.admin__list__item:last-child {
+  border-bottom: none;
+}
+
 .admin__list__item-avatar {
-  height: 100%;
+  height: 80%;
   text-align: center;
   padding: 0 !important;
 }
