--- a/src/pages/admin/pacientes/crudPacientes/crudPacientes.css
+++ b/src/pages/admin/pacientes/crudPacientes/crudPacientes.css
@@ -20,6 +20,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 2rem;
 }
 
 .admin__panel__pacientes-editarUser-btnMascotas{
@@ -51,13 +52,15 @@
     background-color: rgb(218, 218, 218);
 }
 
+@media screen and (max-width: 1600px){
+    .admin__panel__pacientes-editarUser{
+        padding: 0 20rem;
+    }
+}
+
 @media screen and (max-width: 1400px){
     .admin__panel__pacientes-newUser,.admin__panel__pacientes-editarUser{
         padding: 0 15rem;
-    }
-
-    .admin__panel__pacientes-editarUser-mascotas{
-        padding: 0 2rem;
     }
 }
 
@@ -92,6 +95,10 @@
 
     .admin__panel__pacientes-editarUser-btnMascotas{
         margin-top: 2rem;
+    }
+
+    .admin__panel__pacientes-editarUser-mascotas{
+        padding: 0;
     }
 }
 
