--- a/src/components/admin/error/error.css
+++ b/src/components/admin/error/error.css
@@ -14,6 +14,12 @@
     width: 100%;
 }
 
+.error_page-code{
+    position: fixed;
+    bottom: 0;
+    color: gray;
+}
+
 @media screen and (max-width: 1200px) {
     .error__page{
         height: calc(100vh - 72px);
