--- a/src/components/registro/formularioRegistro/formularioRegistro.css
+++ b/src/components/registro/formularioRegistro/formularioRegistro.css
@@ -8,3 +8,19 @@
     margin-right: 0.5rem;
     width: 100%;
 }
+
+.btnContraseña{
+    position: absolute;
+    right: 10px;
+    top: 0;
+    margin-top: 6px;
+    background-color: transparent;
+    border: none;
+    transition: all 0.25s;
+    border-radius: 50%;
+    height: 30px;
+}
+
+.btnContraseña:hover{
+    background-color: #ccc;
+}
