--- a/src/components/admin/panel/panel.css
+++ b/src/components/admin/panel/panel.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
     height: 100%;
 }
 
