limito tablas de contenido

--- a/src/components/admin/panel/panel.css
+++ b/src/components/admin/panel/panel.css
@@ -7,6 +7,10 @@
     height: 100%;
 }
 
+.admin__panel-content-list{
+    height: auto !important;
+}
+
 @media screen and (max-width: 1200px) {
     .admin__panel-content{
         text-align: center;
