--- a/src/pages/registro/registro.css
+++ b/src/pages/registro/registro.css
@@ -49,7 +49,8 @@
     }
 
     .main__registro-content{
-        height: calc(100vh - 102px);
+        margin-top: 130px;
+        height: auto;
     }
 
     .titulos__registro{
