--- a/src/components/user/perfil/panelPerfil.css
+++ b/src/components/user/perfil/panelPerfil.css
@@ -11,6 +11,23 @@
     padding-bottom: 3rem;
 }
 
+.user__perfil-panelTitulos{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-bottom: 1rem;
+}
+
+.user__perfil-avatar{
+    height: 75px;
+}
+
+.user__perfil-avatar img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
 @media screen and (min-width: 1700px){
     .user__panel__pacientes-editarUser{
         padding: 3rem 30rem !important;
