--- a/src/components/registro/formularioRegistro/formularioRegistro.css
+++ b/src/components/registro/formularioRegistro/formularioRegistro.css
@@ -31,7 +31,7 @@
     height: 42px;
 }
 
-.btnFormAvatar-guardar{
+.btnFormCambiarPass{
     border-radius: 23px;
     border: 0;
     transition: background-color 0.25s ease;
