--- a/src/components/admin/panel/list/listItem/listItem.css
+++ b/src/components/admin/panel/list/listItem/listItem.css
@@ -23,6 +23,7 @@
   flex-direction: column;
   align-items: flex-start;
   padding-left: 0 !important;
+  text-align: start;
 }
 
 .admin__list__item-info-user {
@@ -49,5 +50,6 @@
   .admin__list__item-info {
     padding: 0 1rem !important;
     align-items: center;
+    text-align: center;
   }
 }
